# r-dashboard

./: .gitignore  Cargo.toml  Dioxus.toml  Trunk.toml  build.rs  index.css  index.html  input.css  readme.md  tailwind.config.js
src/: app.rs  lib.rs  main.rs
src/components/: header.rs  menu2.rs  mod.rs  sidebar.rs
src/components/menu/: icons.rs  index.rs  mod.rs
src/modules/: demo_data.rs  mod.rs
src/utils/: mod.rs  time.rs
src/views/: blank.rs  card.rs  chart.rs  dashboard.rs  forms.rs  login.rs  mod.rs  modal.rs  tables.rs  ui_elements.rs
src/views/js/: chart1.js  chart2.js
