[package]
name = "r-dashboard"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = {version = "0.5", features = ["web", "router"]}
console_error_panic_hook = "0.1"
dioxus-html-macro = "0.3"

dioxus-sdk = "*"

tracing = "0"
tracing-wasm = "0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1", features = ["time"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-std = "1"
instant = {version = "^0.1", features = ["wasm-bindgen"]}

[profile.release]
opt-level = 'z'
lto = true
strip = true

